1.4.17 (not yet released):
- Include a patch for oscar_table.sql for mysql >= 5.5.
- Apply the oscar_table.sql patch automatically when creating the Debian
package on Ubuntu precise.

1.4.16:
- Automatically detect the source directory on RPM based systems (patch from
O. Lahaye).
- Fix the prereqs for the support of Ubuntu-12.04.
- Fix the manpage (formatting errors).

1.4.15:
- [Ticket #597] Bootstrapping now updates OPKGs data rather than duplicating
the data for all OPKGs.

1.4.14:
- Fix the prereqs for the support of Ubuntu-10-04.

1.4.13:
- Separate the initialization of ODA and the population of the basic data into
ODA.

1.4.12:
- Fix the confusion between db_type and oda_type when getting data from the
OSCAR configuration file (reported by Olivier Lahaye).
- Revisit the initialization of the database: move some tasks that are not ODA
specific outside of the ODA bootstrapping capability (reported by Olivier
Lahaye).
- Handle db services through OSCAR::SystemServices.

1.4.11:
- Make sure the client's hostname is set (patch from Olivier Lahaye).

1.4.10:
- Fix a SQL syntax error when updating a table (patch from Olivier Lahaye).
- Fix a problem when deleting OPKG configuration values (patch from Olivier
Lahaye).

1.4.9:
- Improve output.
- Return an error code when the connection to the database fails.

1.4.8:
- Improve the "make clean" capability.
- Add a dependency to ORM for both RPMs and .debs.

1.4.7:
- [Ticket #430] Avoid misleading message when drop the database in
non-interactive mode.
- Code cleaning-up.

1.4.6:
- Better handling of errors.
- Fix the Debian copyright.
- Modification of the spec so we can create the RPM on FC11 (patch from 
Christophe Trophime).

1.4.5:
- Include perldoc documentation for OSCAR::ODA_Defs.
- Add a new function to get the list of all selected OPKGs (avoid code
duplication in other OSCAR components).

1.4.4:
- Make sure the make_database_password script will not fail without perl-Tk