@@ -1,5 +1,4 @@
 # -*- mode: Makefile; -*-
-
-LIBDIR	?= $(shell perl -V:vendorlib | sed s/vendorlib=\'// | sed s/\'\;//)
-# Ugly stuff the prepare LIBDIR for a usage with sed (extra "\" and so on).
-SEDLIBDIR ?= $(shell perl -V:vendorlib | sed s/vendorlib=\'// | sed s/\'\;// | sed s/\'\;// | awk '{ gsub(/\//, "\\\\\/"); print}')
+#
+LIBDIR  ?= $(shell perl -V:vendorlib | sed s/vendorlib=\'// | sed s/\'\;//)
+MANDIR  ?= /usr/share/man
